--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "homepage": "https://Sara-ibrahiim.github.io/FoodApp",
   "name": "foodapp",
   "private": true,
-
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-   "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -17,9 +16,11 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5"
   },
